--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -21,7 +21,7 @@ GPUs. Otherwise, the time to translate a single sentence can easily exceed one
 second on a standard CPU.
 
 Higher decoding speeds can be achieved by model optimization. In their 2019
-submission to the \ac{wngt} shared task on efficiency,
+submission to the \ac{wngt} Efficiency Shared Task,
 \citet{kim-etal-2019-research} successfully employed knowledge distillation,
 quantization, shortlisting \citep{jean-etal-2015-using} and a simpler recurrent
 unit design to bring the throughput of a translation model up to 3,600 words
