--- a/thesis/06-conclusions.tex
+++ b/thesis/06-conclusions.tex
@@ -5,6 +5,7 @@
 
 Here, we \JH{present conclusions}.
 
+\JH{One future work is to implement the quantization into the NAT models.}
 
 %%% Local Variables:
 %%% mode: latex
