--- a/thesis/img/learning-curves/de-en.curves.tex
+++ b/thesis/img/learning-curves/de-en.curves.tex
@@ -8,25 +8,25 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.136,1.765)--(1.316,1.765);
 \draw[gp path] (12.947,1.765)--(12.767,1.765);
-\node[gp node right] at (0.952,1.765) {$15$};
+\node[gp node right] at (0.952,1.765) {15};
 \draw[gp path] (1.136,2.753)--(1.316,2.753);
 \draw[gp path] (12.947,2.753)--(12.767,2.753);
-\node[gp node right] at (0.952,2.753) {$20$};
+\node[gp node right] at (0.952,2.753) {20};
 \draw[gp path] (1.136,3.740)--(1.316,3.740);
 \draw[gp path] (12.947,3.740)--(12.767,3.740);
-\node[gp node right] at (0.952,3.740) {$25$};
+\node[gp node right] at (0.952,3.740) {25};
 \draw[gp path] (1.136,4.728)--(1.316,4.728);
 \draw[gp path] (12.947,4.728)--(12.767,4.728);
-\node[gp node right] at (0.952,4.728) {$30$};
+\node[gp node right] at (0.952,4.728) {30};
 \draw[gp path] (1.136,5.716)--(1.316,5.716);
 \draw[gp path] (12.947,5.716)--(12.767,5.716);
-\node[gp node right] at (0.952,5.716) {$35$};
+\node[gp node right] at (0.952,5.716) {35};
 \draw[gp path] (1.136,6.703)--(1.316,6.703);
 \draw[gp path] (12.947,6.703)--(12.767,6.703);
-\node[gp node right] at (0.952,6.703) {$40$};
+\node[gp node right] at (0.952,6.703) {40};
 \draw[gp path] (1.136,7.691)--(1.316,7.691);
 \draw[gp path] (12.947,7.691)--(12.767,7.691);
-\node[gp node right] at (0.952,7.691) {$45$};
+\node[gp node right] at (0.952,7.691) {45};
 \draw[gp path] (1.136,1.765)--(1.136,1.945);
 \draw[gp path] (1.136,7.691)--(1.136,7.511);
 \node[gp node right,rotate=45] at (1.136,1.581) {0};
@@ -51,7 +51,7 @@
 \draw[gp path] (1.136,7.691)--(1.136,1.765)--(12.947,1.765)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.728) {\acs{bleu}};
 \node[gp node center] at (7.041,0.465) {Number of updates};
-\node[gp node right] at (12.031,4.024) {large};
+\node[gp node right] at (12.031,4.024) {Large};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,4.024)--(12.579,4.024);
@@ -72,7 +72,7 @@
   --(7.750,6.328)--(7.829,6.328)--(7.908,6.328)--(7.986,6.328)--(8.065,6.348)--(8.144,6.348)%
   --(8.223,6.348);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,3.562) {base};
+\node[gp node right] at (12.031,3.562) {Base};
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,3.562)--(12.579,3.562);
 \draw[gp path] (1.255,1.765)--(1.293,2.911)--(1.372,3.424)--(1.451,3.918)--(1.530,4.155)%
@@ -97,7 +97,7 @@
   --(10.112,6.071)--(10.191,6.012)--(10.270,6.032)--(10.349,6.012)--(10.427,6.091)--(10.506,6.032)%
   --(10.585,6.032)--(10.664,6.071);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,3.100) {small};
+\node[gp node right] at (12.031,3.100) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,3.100)--(12.579,3.100);
 \draw[gp path] (1.215,1.765)--(1.293,2.792)--(1.372,3.286)--(1.451,3.721)--(1.530,3.938)%
@@ -124,7 +124,7 @@
   --(11.057,5.874)--(11.136,5.874)--(11.215,5.913)--(11.293,5.893)--(11.372,5.893)--(11.451,5.933)%
   --(11.530,5.933)--(11.608,5.893)--(11.687,5.913)--(11.766,5.874);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,2.638) {micro};
+\node[gp node right] at (12.031,2.638) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,2.638)--(12.579,2.638);
 \draw[gp path] (1.230,1.765)--(1.293,2.792)--(1.372,3.207)--(1.451,3.622)--(1.530,3.780)%
@@ -151,7 +151,7 @@
   --(11.057,5.597)--(11.136,5.577)--(11.215,5.617)--(11.293,5.577)--(11.372,5.577)--(11.451,5.637)%
   --(11.530,5.617)--(11.608,5.597)--(11.687,5.597);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,2.176) {tiny};
+\node[gp node right] at (12.031,2.176) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,2.176)--(12.579,2.176);
 \draw[gp path] (1.284,1.765)--(1.293,1.884)--(1.372,2.180)--(1.451,2.437)--(1.530,2.614)%
