--- a/thesis/img/learning-curves/en-de.curves.tex
+++ b/thesis/img/learning-curves/en-de.curves.tex
@@ -8,25 +8,25 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (1.136,1.505)--(1.316,1.505);
 \draw[gp path] (12.947,1.505)--(12.767,1.505);
-\node[gp node right] at (0.952,1.505) {$15$};
+\node[gp node right] at (0.952,1.505) {15};
 \draw[gp path] (1.136,2.536)--(1.316,2.536);
 \draw[gp path] (12.947,2.536)--(12.767,2.536);
-\node[gp node right] at (0.952,2.536) {$20$};
+\node[gp node right] at (0.952,2.536) {20};
 \draw[gp path] (1.136,3.567)--(1.316,3.567);
 \draw[gp path] (12.947,3.567)--(12.767,3.567);
-\node[gp node right] at (0.952,3.567) {$25$};
+\node[gp node right] at (0.952,3.567) {25};
 \draw[gp path] (1.136,4.598)--(1.316,4.598);
 \draw[gp path] (12.947,4.598)--(12.767,4.598);
-\node[gp node right] at (0.952,4.598) {$30$};
+\node[gp node right] at (0.952,4.598) {30};
 \draw[gp path] (1.136,5.629)--(1.316,5.629);
 \draw[gp path] (12.947,5.629)--(12.767,5.629);
-\node[gp node right] at (0.952,5.629) {$35$};
+\node[gp node right] at (0.952,5.629) {35};
 \draw[gp path] (1.136,6.660)--(1.316,6.660);
 \draw[gp path] (12.947,6.660)--(12.767,6.660);
-\node[gp node right] at (0.952,6.660) {$40$};
+\node[gp node right] at (0.952,6.660) {40};
 \draw[gp path] (1.136,7.691)--(1.316,7.691);
 \draw[gp path] (12.947,7.691)--(12.767,7.691);
-\node[gp node right] at (0.952,7.691) {$45$};
+\node[gp node right] at (0.952,7.691) {45};
 \draw[gp path] (1.136,1.505)--(1.136,1.685);
 \draw[gp path] (1.136,7.691)--(1.136,7.511);
 \node[gp node right,rotate=45] at (1.136,1.321) {0 };
@@ -60,7 +60,7 @@
 \draw[gp path] (1.136,7.691)--(1.136,1.505)--(12.947,1.505)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.598) {\acs{bleu}};
 \node[gp node center] at (7.041,0.215) {Number of updates};
-\node[gp node right] at (12.031,3.764) {large};
+\node[gp node right] at (12.031,3.764) {Large};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,3.764)--(12.579,3.764);
@@ -76,7 +76,7 @@
   --(6.805,6.804)--(6.910,6.763)--(7.015,6.804)--(7.120,6.784)--(7.225,6.804)--(7.330,6.763)%
   --(7.435,6.804)--(7.540,6.804);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,3.302) {base};
+\node[gp node right] at (12.031,3.302) {Base};
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,3.302)--(12.579,3.302);
 \draw[gp path] (1.328,1.505)--(1.346,2.082)--(1.451,2.907)--(1.556,3.402)--(1.661,3.711)%
@@ -93,7 +93,7 @@
   --(8.065,5.815)--(8.170,5.815)--(8.275,5.794)--(8.380,5.815)--(8.485,5.835)--(8.590,5.794)%
   --(8.695,5.815)--(8.800,5.835)--(8.905,5.835)--(9.010,5.835)--(9.115,5.876)--(9.220,5.876);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,2.840) {small};
+\node[gp node right] at (12.031,2.840) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,2.840)--(12.579,2.840);
 \draw[gp path] (1.300,1.505)--(1.346,2.557)--(1.451,3.320)--(1.556,3.753)--(1.661,4.041)%
@@ -110,7 +110,7 @@
   --(8.065,5.794)--(8.170,5.815)--(8.275,5.794)--(8.380,5.815)--(8.485,5.815)--(8.590,5.815)%
   --(8.695,5.856)--(8.800,5.835)--(8.905,5.856)--(9.010,5.856)--(9.115,5.835);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,2.378) {micro};
+\node[gp node right] at (12.031,2.378) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,2.378)--(12.579,2.378);
 \draw[gp path] (1.246,1.505)--(1.346,3.320)--(1.451,3.979)--(1.556,4.371)--(1.661,4.639)%
@@ -132,7 +132,7 @@
   --(11.215,6.145)--(11.320,6.186)--(11.425,6.186)--(11.530,6.206)--(11.635,6.186)--(11.740,6.186)%
   --(11.845,6.206)--(11.950,6.186);
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,1.916) {tiny};
+\node[gp node right] at (12.031,1.916) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,1.916)--(12.579,1.916);
 \draw[gp path] (1.338,1.505)--(1.346,1.587)--(1.451,2.268)--(1.556,2.742)--(1.661,3.010)%
