--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -137,30 +137,34 @@
 
 *** Latency
 
-  |---------+----------------------+------------------------|
-  | Model   | Latency - CPU 1 Core | Latency - CPU 36 cores |
-  |---------+----------------------+------------------------|
-  | AR Big  |                      |                        |
-  | AR Base |                      |                        |
-  |---------+----------------------+------------------------|
-  | Large   |                      |                        |
-  | Base    |                      |                        |
-  | Small   |                      |                        |
-  | Micro   |                      |                        |
-  | Tiny    |                      |                        |
-  |---------+----------------------+------------------------|
+  |---------+----------------------------+------------------------|
+  | Model   | Latency - CPU 1 Core (x10) | Latency - CPU 36 cores |
+  |---------+----------------------------+------------------------|
+  | AR Big  |                            |                        |
+  | AR Base |                            |                        |
+  |---------+----------------------------+------------------------|
+  | Large   |                      35013 |                  14542 |
+  | Base    |                       9463 |                   3508 |
+  | Small   |                       6196 |                   2346 |
+  | Micro   |                       5108 |                   1952 |
+  | Tiny    |                       1581 |                    784 |
+  |---------+----------------------------+------------------------|
 
 *** Throughput
 
   Different batch sizes on 36 cores
 
-  |----------+-----+------+------+------+-------+-------|
-  | Model    | b=8 | b=16 | b=32 | b=64 | b=128 | b=256 |
-  |----------+-----+------+------+------+-------+-------|
-  | AR Base  |     |      |      |      |       |       |
-  |----------+-----+------+------+------+-------+-------|
-  | NAR Base |     |      |      |      |       |       |
-  |----------+-----+------+------+------+-------+-------|
+  |---------+-----+------+------+------|
+  | Model   | b=8 | b=16 | b=32 | b=64 |
+  |---------+-----+------+------+------|
+  | AR Base |     |      |      |      |
+  |---------+-----+------+------+------|
+  | Large   |     |      |      | 8238 |
+  | Base    |     |      |      | 2934 |
+  | Small   |     |      |      | 1936 |
+  | Micro   |     |      |      | 1607 |
+  | Tiny    |     |      |      |  701 |
+  |---------+-----+------+------+------|
 
 ** GPU
 
@@ -173,29 +177,40 @@
     | AR Base |                     |                     |
     |---------+---------------------+---------------------|
     | Large   |                     |                     |
-    | Base    |                     |                     |
-    | Small   |                     |                     |
-    | Micro   |                     |                     |
+    | Base    |                8720 |                     |
+    | Small   |                5017 |                     |
+    | Micro   |                3781 |                     |
     | Tiny    |                1916 |                     |
     |---------+---------------------+---------------------|
 
 *** Throughput
 
-    P100
+    P100 MAX LENGTH 100
 
-  |---------+------+------+------+------+------+------+-------|
-  | Model   |  b=1 |  b=4 |  b=8 | b=16 | b=32 | b=64 | b=128 |
-  |---------+------+------+------+------+------+------+-------|
-  | AR Base |      |      |      |      |      |      |       |
-  |---------+------+------+------+------+------+------+-------|
-  | Large   |      |      |      |      |      |      |       |
-  | Base    |      |      | 3146 | 2769 | 2535 | 2394 |       |
-  | Small   |      | 2376 | 1977 | 1748 | 1635 | 1564 |       |
-  | Micro   |      | 1871 | 1579 | 1418 | 1343 | 1282 |       |
-  | Tiny    | 1916 |  960 |  803 |  730 |  687 |  666 |       |
-  |---------+------+------+------+------+------+------+-------|
+  |------------+-------+------+-------+-------+------+------+------|
+  | Batch size |     1 |    4 |     8 |    16 |   32 |   64 |  128 |
+  |------------+-------+------+-------+-------+------+------+------|
+  | AR Base    |       |      | 18503 | 11087 | 6677 | 4503 | 3409 |
+  |------------+-------+------+-------+-------+------+------+------|
+  | Large      | 14157 | 8079 |  7003 |  6452 | 6056 | 5767 | 5581 |
+  | Base       |  8720 | 3875 |  3146 |  2769 | 2535 | 2394 | 2303 |
+  | Small      |  5017 | 2376 |  1977 |  1748 | 1635 | 1564 | 1512 |
+  | Micro      |  3781 | 1871 |  1579 |  1418 | 1343 | 1282 | 1248 |
+  | Tiny       |  1916 |  960 |   803 |   730 |  687 |  666 |  652 |
+  |------------+-------+------+-------+-------+------+------+------|
 
+**** Export
 
+     transposed for gnuplot:
+
+     | Batch size | AR Base | Large | Base | Small | Micro | Tiny |
+     |          1 |         | 14157 | 8720 |  5017 |  3781 | 1916 |
+     |          4 |         |  8079 | 3875 |  2376 |  1871 |  960 |
+     |          8 |   18503 |  7003 | 3146 |  1977 |  1579 |  803 |
+     |         16 |   11087 |  6452 | 2769 |  1748 |  1418 |  730 |
+     |         32 |    6677 |  6056 | 2535 |  1635 |  1343 |  687 |
+     |         64 |    4503 |  5767 | 2394 |  1564 |  1282 |  666 |
+     |        128 |    3409 |  5581 | 2303 |  1512 |  1248 |  652 |
 
 
 * Old stuff
