text on limitations and then some

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -1082,6 +1082,9 @@ criticized for being prone to errors due to outliers or being too inaccurate
 when the score itself is low.
 \citep{callison-burch-etal-2006-evaluating,bojar-etal-2010-tackling,reiter2018structured,mathur-etal-2020-tangled}
 
+\JH{Add details about Character F-score and COMET! \citep{rei-etal-2020-comet,
+    popovic-2015-chrf}}
+
 Besides the translation quality, the models can also be evaluated in terms of
 efficiency. The decoding speed is usually measured in two dimensions:
 \emph{latency} and \emph{throughput}. Latency is the time to decode a single
