--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -380,7 +380,7 @@ modeling the alignment between the sequences of outputs and ground-truth
 labels.
 
 % -----------------------------------------------------------------------------
-\paragraph{Aligned Cross Entropy for \ac{nat}} The main problem with using
+\paragraph{Aligned Cross Entropy for \ac{nat}.} The main problem with using
 cross-entropy objective for training \ac{nat} models is that it heavily
 penalizes misaligned target words. If a correct word is generated at an
 incorrect position in the target sentence, it does not have a positive effect
