--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -392,23 +392,35 @@ each reference translation set, and we report the average.\footnote{\acs{chrf};
 Finally, the \acs{comet} scores are computed with \acs{comet} version
 \texttt{dd2298} (1.0.0rc9) using the \texttt{wmt20-comet-da} model.
 
-\JH{We observe... gaps everywhere, AR clearly better in translation. relatively
-  small gaps in ChrF scores, moderate gaps in bleu, large gaps in COMET which
-  could suggest that NAR systems will rank poorly in human evaluation even
-  though they achieve high BLEU scores.}
+We observe that in both translation directions, the \ac{ar} models outperform
+the \ac{nar} models. The performance gap between the models grows futher with
+beam search and ensembling. We can also see that knowledge distillation has
+positive effect on both \ac{ar} and \ac{nar} models, with the student \ac{ar}
+model matching the performance of the ensemble of the large teacher models.
+We also note that the difference in the \acs{comet} score is bigger than in
+\acs{bleu}, which might suggest that \acs{nar} models would rank poorly in
+human evaluation, despite achieving reasonable \acs{bleu} scores.
+\JH{say somewhere that they do not use distillation for the ar baselines}
 
-\JH{We also see the same ranking of the NAR models, the larger student model,
-  the better, with the exception of the Micro En-De model, which is better than
-  the base model (this follows the situation during validation). In experiments
-  with tied embeddings, the micro model scored in the expected position between
-  the small and tiny models (todo: confirm this) }
+% \JH{We observe... gaps everywhere, AR clearly better in translation. relatively
+%   small gaps in ChrF scores, moderate gaps in bleu, large gaps in COMET which
+%   could suggest that NAR systems will rank poorly in human evaluation even
+%   though they achieve high BLEU scores.}
+
+The results on the test set confirm the ranking of the \acs{nar} models
+apparent from the learning curves (see Figures \ref{fig:ende-learning-curves}
+and \ref{fig:deen-learning-curves}). With the interesting exception of the
+English $\rightarrow$ German Micro model, the larger the student model, the
+better scores it achieves.
+\JH{we have experiments with tied embeddings but I would keep them out because
+  the results were the same.}
 
 \begin{table}
   \centering
 
   \begin{tabular}{lrrr@{}>{\small \enspace \textpm}l}
     \toprule
-    Model & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+    En $\rightarrow$ De & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
     \midrule
     Single greedy \acs{ar} \\
     Large & 59.2 & 0.4110  & 50.5  & 1.3 \\
@@ -421,6 +433,9 @@ Finally, the \acs{comet} scores are computed with \acs{comet} version
     Ensemble beam \acs{ar} \\
     Large & 59.5 & 0.4332 & 52.2 & 1.3 \\
     \midrule
+    Student (single, greedy) \acs{ar} \\
+    Base & 59.5 & 0.4550 & 51.6 &  1.2 \\
+    \addlinespace
     \Acl{nar} models \\
     Large & 58.6 & 0.1485 & 47.8 & 1.2\\
     Base & 56.3 & -0.0521 & 41.8 & 1.1\\
@@ -446,7 +461,7 @@ Finally, the \acs{comet} scores are computed with \acs{comet} version
 
   \begin{tabular}{lrrr@{}>{\small \enspace \textpm}l}
     \toprule
-    Model & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+    De $\rightarrow$ En & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
     \midrule
     Single greedy \acs{ar} \\
     Large & 61.9 & 0.5868 & 48.4 & 1.3 \\
@@ -459,6 +474,9 @@ Finally, the \acs{comet} scores are computed with \acs{comet} version
     Ensemble beam \acs{ar} \\
     Large & 62.1 & 0.5954 & 50.6 & 1.3 \\
     \midrule
+    Student (single, greedy) \acs{ar} \\
+    Base & 63.3 & 0.6115 & 51.1 & 1.3 \\
+    \addlinespace
     \Acl{nar} models \\
     Large & 61.6 & 0.3296 & 46.4 & 1.4\\
     Base & 61.4 & 0.2957 & 45.8 & 1.3\\
@@ -643,7 +661,7 @@ albeit on a slightly different server architecture. \JH{TODO: For better
 \label{subsec:results:discussion}
 % ------------------------------------------------------------------------------
 
-
+\JH{V diskusi musim rict: First, we achieved best scores on wmt 14, but those exact models score very poorly on wmt21, especially with the COMET score which should simulate human evaluation \citep{rei-etal-2020-comet, popovic-2015-chrf}}
 
 %%% Local Variables:
 %%% mode: latex
